--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ google-generativeai==0.3.2
 openai==1.6.1
 
 # Embeddings & Vector DB
+torch==2.0.1
 sentence-transformers==2.2.2
+huggingface-hub==0.16.4
 faiss-cpu==1.7.4
 numpy==1.24.3
 
